--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,16 +4,15 @@ layout: default
 
 <div class="post">
   <div class="post-info">
-    <span>Written by</span>
+    Published 
+    {% if page.date %}
+    <time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
+    {% endif %}
+    by
     {% if page.author %}
         {{ page.author }}
     {% else %}
         {{ site.author.name }}
-    {% endif %}
-
-    {% if page.date %}
-      <br>
-      <span>on&nbsp;</span><time datetime="{{ page.date }}">{{ page.date | date: "%B %d, %Y" }}</time>
     {% endif %}
   </div>
 
