--- a/_sass/tale/_catalogue.scss
+++ b/_sass/tale/_catalogue.scss
@@ -19,13 +19,14 @@
     color: $default-tint;
     font-family: $serif-secondary;
     letter-spacing: .5px;
+    // font-size: .9rem;
   }
 
   &-title {
     color: $default-shade;
     display: block;
     font-family: $sans-serif;
-    font-size: 2rem;
+    font-size: 1.8rem;
     font-weight: 700;
     margin: .5rem 0;
   }
