--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -6,17 +6,20 @@
     font-family: $serif-secondary;
     letter-spacing: 0.5px;
     text-align: center;
+    font-style: italic;
+    font-size: 0.9rem;
 
-    span {
-      font-style: italic;
-    }
+    // span {
+    //   font-style: italic;
+    // }
   }
 
   &-title {
     color: $default-shade;
     font-family: $sans-serif;
-    font-size: 4rem;
-    margin: 1rem 0;
+    font-size: 3rem;
+    margin-top: 0.5rem;
+    margin-bottom: 1rem;
     text-align: center;
   }
 
