--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -8,6 +8,7 @@ body {
   color: $default-color;
   margin: 0;
   padding: 0;
+
 }
 
 html {
@@ -34,6 +35,8 @@ h6 {
   color: $default-shade;
   font-family: $sans-serif;
   line-height: normal;
+
+  overflow-wrap: break-word;
 }
 
 a {
