--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -21,6 +21,10 @@
     margin-top: 0.5rem;
     margin-bottom: 1rem;
     text-align: center;
+
+    @media (max-width: 600px) {
+      font-size: 2.2rem;
+    }
   }
 
   &-line {
