--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,8 @@
       <h3 class="nav-title">{{ site.title }}</h2>
     </a>
     <ul>
-      <li><a href="{{ '/about' | prepend: site.baseurl }}">About</a></li>
+      <li><a href="{{ '/aboutme' | prepend: site.baseurl }}">About me / contact</a></li>
+      <li><a href="{{ '/projects' | prepend: site.baseurl }}">Projects</a></li>
       <li><a href="{{ site.baseurl }}/">Posts</a></li>
     </ul>
   </div>
