--- a/_sass/tale/_projects.scss
+++ b/_sass/tale/_projects.scss
@@ -6,11 +6,6 @@
 
 .project {
   overflow: auto;
-  // padding-top: 3rem;
-
-  p {
-    text-align: left;
-  }
 
   .project-image {
     overflow: auto;
@@ -40,8 +35,9 @@
       display: block;
     }
 
-    p {
-      text-align: center;
+    .project-description {
+      width: 300px;
+      margin: auto;
     }
   }
 }
