--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer>
   <div class="workwithme">
-    Want to work with me? Please email me at <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#104;&#101;&#108;&#108;&#111;&#064;&#100;&#101;&#110;&#110;&#105;&#115;&#104;&#101;&#108;&#108;&#119;&#101;&#103;&#046;&#099;&#111;&#109;">&#104;&#101;&#108;&#108;&#111;&#064;&#100;&#101;&#110;&#110;&#105;&#115;&#104;&#101;&#108;&#108;&#119;&#101;&#103;&#046;&#099;&#111;&#109;</a>
+    Want to work with me or just have a chat? 
+    <br />
+    Please email me at <a href="&#109;&#097;&#105;&#108;&#116;&#111;:&#104;&#101;&#108;&#108;&#111;&#064;&#100;&#101;&#110;&#110;&#105;&#115;&#104;&#101;&#108;&#108;&#119;&#101;&#103;&#046;&#099;&#111;&#109;">&#104;&#101;&#108;&#108;&#111;&#064;&#100;&#101;&#110;&#110;&#105;&#115;&#104;&#101;&#108;&#108;&#119;&#101;&#103;&#046;&#099;&#111;&#109;</a>
   </div>
   <div class="copyright">
     &copy; <time datetime="{{ site.time }}">{{ site.time | date: '%Y' }}</time> {{ site.author.name }}
