--- a/_sass/tale/_variables.scss
+++ b/_sass/tale/_variables.scss
@@ -9,6 +9,7 @@ $white: #fff;
 $blue: #4a9ae1;
 $shadow-color: rgba(0, 0, 0, .2);
 $code-color: #bf616a;
+$faded-color: #808080;
 
 // Fonts
 // $serif-primary: 'Libre Baskerville', 'Times New Roman', Times, serif;
