--- a/_sass/tale/_code.scss
+++ b/_sass/tale/_code.scss
@@ -59,7 +59,7 @@ pre code {
   padding-bottom: 0.4rem;
   padding-left: 16px;
   padding-right: 10px;
-  margin: -1rem 0 0 0 !important;
+  margin: -1rem 0 1rem 0 !important;
   background-color: #f9f9f9;
   border: 1px solid $grey-2;
   border-bottom-left-radius: 3px;
