--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -67,4 +67,11 @@
     padding: 0;
     margin: 0;
   }
+
+  video {
+    max-width: 100%;
+    display: block;
+    margin: auto;
+    margin-bottom: 1rem;
+  }
 }
