--- a/_sass/tale/_base.scss
+++ b/_sass/tale/_base.scss
@@ -85,3 +85,9 @@ video {
     width: 80%;
   }
 }
+
+.profile-image {
+  border-radius: 50% !important;
+  max-width: 200px;
+  margin-bottom: 1.5rem !important;
+}
