--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+description: Hi! I'm Dennis Hellweg, I'm a full-stack software engineer and this is my personal site.
 ---
 
 <div class="catalogue">
