--- a/_sass/tale/_post.scss
+++ b/_sass/tale/_post.scss
@@ -1,6 +1,11 @@
 .post {
   padding: 3rem 0;
 
+  @media (max-width: 48em) {
+    padding: 0 0 1.5rem 0;
+  }
+
+
   &-info {
     color: $default-tint;
     font-family: $serif-secondary;
